[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-mq9"
version = "1.0.1"
description = "LangChain tools for the mq9 AI-native async Agent mailbox protocol"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.2",
    "robustmq>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "langchain-openai",
]

[project.urls]
Homepage = "https://github.com/robustmq/robustmq-sdk"
Repository = "https://github.com/robustmq/robustmq-sdk"

[tool.hatch.build.targets.wheel]
packages = ["langchain_mq9"]
