[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robustmq"
version = "0.3.5"
description = "RobustMQ Python SDK — unified messaging for AI, IoT, and data pipelines"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "nats-py>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["robustmq"]
