[package]
name = "robustmq"
version = "0.3.5"
edition = "2021"
description = "RobustMQ Rust SDK — mq9 AI-native async messaging"
license = "Apache-2.0"

[dependencies]
async-nats = "0.35"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "demo"
path = "examples/demo.rs"
